--- a/Dockerfile.spark
+++ b/Dockerfile.spark
@@ -14,6 +14,7 @@ ENV HOME=/home/spark
 
 WORKDIR /opt/spark-apps
 COPY ./src /opt/spark-apps
+COPY ./config /opt/spark-config
 
 USER 185
 CMD ["bash"]
