--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,16 +3,18 @@ name = "big-project"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.12"
 dependencies = [
-    "confluent-kafka>=2.11.1",
-    "keybert>=0.9.0",
-    "loguru>=0.7.3",
-    "praw>=7.8.1",
-    "prefect>=3.4.22",
-    "pydantic>=2.11.10",
-    "pydantic-settings>=2.11.0",
-    "pyspark==3.5.5",
-    "requests>=2.32.5",
-    "tenacity>=9.1.2",
+    "confluent-kafka",
+    "elasticsearch",
+    "keybert",
+    "loguru",
+    "praw",
+    "prefect",
+    "pydantic",
+    "pydantic-settings",
+    "pyspark==4.0.1",
+    "requests",
+    "tenacity",
+    "elasticsearch==8.13.0"
 ]
