Refactor: remove large binaries and update project files

--- a/.env.kafka
+++ b/.env.kafka
@@ -1,10 +1,10 @@
 REDDIT_CLIENT_ID=5Jjpwy1Xi4BOt7bgEi4YDw
 REDDIT_CLIENT_SECRET=hOW2h5PLLbZjYLwgeUZT0BuFZveYMQ
 REDDIT_USER_AGENT=MyRedditApp/1.0
-REDDIT_SUBREDDIT_LIMIT=100
-REDDIT_POSTS_PER_SUBREDDIT=100
-REDDIT_COMMENT_LIMIT=100
-REDDIT_POST_SORT=top
+REDDIT_SUBREDDIT_LIMIT=10000
+REDDIT_POSTS_PER_SUBREDDIT=10000
+REDDIT_COMMENT_LIMIT=10000
+REDDIT_POST_SORT=hot
 
 
 KAFKA_BOOTSTRAP_SERVERS=localhost:9092
